--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,23 @@
 <app-topo></app-topo>
-<app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
+  <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+</div>
+<ng-template #fimDeJogo>
+  <div *ngIf="tipoEncerrament === 'derrota'; else vitoria" class="container" style="margin-top: 50px">
+    <div class="row">
+      <div class="col">
+        <h3 style="color: red">Fim de jogo</h3>
+      </div>
+    </div>
+  </div>
+</ng-template>
+<ng-template #vitoria>
+  <div class="container" style="margin-top: 50px">
+    <div class="row">
+      <div class="col">
+        <h3 style="color: green">Ganhou</h3>
+      </div>
+    </div>
+  </div>
+</ng-template>
+
